Wrap the example link in a section for DocBook output

Typically, this link comes at the end of a document, after other
sections, which is not allowed in DocBook (only sections can come after
sections in articles).

Fixes: QTBUG-103749
Change-Id: Ic0921ea9f282575548b302ac084d8fdb19eeb1d9
Reviewed-by: Luca Di Sera <luca.disera@qt.io>